<resources>
    <string name="app_name">Siren</string>
    <string name="title_activity_main_map">Map</string>
    <string name="email_hint">Username or E-mail</string>
    <string name="Password_hint">Password</string>
    <string name="change_picture">change picture </string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">+01000000000</string>
    <string name="email">Email here</string>
    <string name="street_name">Street Name</string>
    <string name="description">type your description here</string>
    <string name="cancel_request">Cancel</string>
    <string name="description_title">Description:</string>
    <string name="sign_up_question">don\'t have an account?</string>
    <string name="title_activity_slide_menu">slide_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
